src/snapshots/enderpy__lexer__tests__test-lexer-45.snap
---
source: src/lexer.rs
description: "<<"
---
[
    Token {
        kind: LeftShift,
        value: None,
        start: 0,
        end: 2,
    },
]
