src/snapshots/enderpy__lexer__tests__test-lexer-46.snap
---
source: src/lexer.rs
description: ">>"
---
[
    Token {
        kind: RightShift,
        value: None,
        start: 0,
        end: 2,
    },
]
