src/snapshots/enderpy__lexer__tests__test-lexer-47.snap
---
source: src/lexer.rs
description: "&"
---
[
    Token {
        kind: BitAnd,
        value: None,
        start: 0,
        end: 1,
    },
]
