src/snapshots/enderpy__lexer__tests__test-lexer-48.snap
---
source: src/lexer.rs
description: "|"
---
[
    Token {
        kind: BitOr,
        value: None,
        start: 0,
        end: 1,
    },
]
