src/snapshots/enderpy__lexer__tests__test-lexer-5.snap
---
source: src/lexer.rs
description: if else elif
---
[
    Token {
        kind: If,
        value: None,
        start: 0,
        end: 2,
    },
    Token {
        kind: Else,
        value: None,
        start: 3,
        end: 7,
    },
    Token {
        kind: Elif,
        value: None,
        start: 8,
        end: 12,
    },
]
