src/snapshots/enderpy__lexer__tests__test-lexer-50.snap
---
source: src/lexer.rs
description: "~"
---
[
    Token {
        kind: BitNot,
        value: None,
        start: 0,
        end: 1,
    },
]
