src/snapshots/enderpy__lexer__tests__test-lexer-51.snap
---
source: src/lexer.rs
description: ":="
---
[
    Token {
        kind: Walrus,
        value: None,
        start: 0,
        end: 2,
    },
]
