src/snapshots/enderpy__lexer__tests__test-lexer-52.snap
---
source: src/lexer.rs
description: "<"
---
[
    Token {
        kind: Less,
        value: None,
    },
]
