src/snapshots/enderpy__lexer__tests__test-lexer-53.snap
---
source: src/lexer.rs
description: ">"
---
[
    Token {
        kind: Greater,
        value: None,
        start: 0,
        end: 1,
    },
]
