src/snapshots/enderpy__lexer__tests__test-lexer-54.snap
---
source: src/lexer.rs
description: "<="
---
[
    Token {
        kind: LessEq,
        value: None,
        start: 0,
        end: 2,
    },
]
