src/snapshots/enderpy__lexer__tests__test-lexer-55.snap
---
source: src/lexer.rs
description: ">="
---
[
    Token {
        kind: GreaterEq,
        value: None,
        start: 0,
        end: 2,
    },
]
